# authx-api

./: .env.example  .gitignore  Dockerfile  README.md  deps.py  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: crud.py  main.py  seed_db.py
app/api/: deps.py  main.py
app/api/routes/: auth_routes.py  user_routes.py
app/core/: config.py  database.py  logging.py  security.py
app/migrations/: env.py
app/migrations/versions/: 3026b4e529ec_initial_migration_after_db_clean_up.py  8fb4971720b5_initial_schema.py  fd8a5897a8be_add_created_at_and_updated_at_fields.py
app/models/: user.py
app/scripts/: format.sh  prestart.sh
app/services/: auth_services.py
app/tests/: conftest.py
app/tests/api/: test_auth_login.py  test_auth_register.py  utils.py
app/tests/api_routes/: test_login.py  test_register.py
core/: config.py  database.py  logging.py  security.py
migrations/: env.py
migrations/versions/: 282c96dba225_initial_migration.py
models/: user.py
routers/: auth.py  auth_routes.py  user_routes.py
schemas/: user.py
services/: auth_services.py
utils/: security.py
